@@ -9,7 +9,8 @@ use Test::More;
 use MaxMind::DB::Writer::Serializer;
 
 {
-    my $serializer = MaxMind::DB::Writer::Serializer->new();
+    my $serializer = MaxMind::DB::Writer::Serializer->new(
+        map_key_type_callback => sub { } );
     $serializer->_encode_end_marker();
 
     bits_is(
