@@ -25,7 +25,9 @@ ok(
     'input is marked as utf8 in Perl'
 );
 
-my $serializer = MaxMind::DB::Writer::Serializer->new();
+my $serializer
+    = MaxMind::DB::Writer::Serializer->new( map_key_type_callback => sub { }
+    );
 $serializer->store_data( utf8_string => $input );
 
 my $buffer = $serializer->buffer();
