@@ -9,15 +9,17 @@ use Net::Works::Network;
 
 my $ipv4_network
     = Net::Works::Network->new_from_string( string => '1.1.1.0/24' );
-my $ipv6_network = Net::Works::Network->new_from_string( string => '::2/128' );
+my $ipv6_network
+    = Net::Works::Network->new_from_string( string => '::2/128' );
 
 {
     my $tree = MaxMind::DB::Writer::Tree->new(
-        ip_version  => 4,
-        record_size => 24,
-        database_type => 'Test',
-        languages     => ['en'],
-        description   => { en => 'Test tree' },
+        ip_version            => 4,
+        record_size           => 24,
+        database_type         => 'Test',
+        languages             => ['en'],
+        description           => { en => 'Test tree' },
+        map_key_type_callback => sub { },
     );
 
     $tree->insert_network( $ipv4_network, 'foo' );
@@ -30,11 +32,12 @@ my $ipv6_network = Net::Works::Network->new_from_string( string => '::2/128' );
 
 {
     my $tree = MaxMind::DB::Writer::Tree->new(
-        ip_version  => 6,
-        record_size => 24,
-        database_type => 'Test',
-        languages     => ['en'],
-        description   => { en => 'Test tree' },
+        ip_version            => 6,
+        record_size           => 24,
+        database_type         => 'Test',
+        languages             => ['en'],
+        description           => { en => 'Test tree' },
+        map_key_type_callback => sub { },
     );
 
     $tree->insert_network( $ipv6_network, 'foo' );
