@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- The map_key_type_callback argument for the MaxMind::DB::Writer::Tree class
+  is now required. In some use cases it's not really used but in the most
+  common use case leaving it out simply leads to confusing errors when
+  attempting to write the tree to disk. GH #10.
+
+
 0.050007 2014-10-20
 
 - The writer now iterates over the search tree in depth-first order when the
